--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -108,7 +108,7 @@ body{
 }
 
 .sidenav{
-    @apply font-semibold p-2 text-sm text-gray-800 hover:text-blue-600 focus:text-blue-700 hover:pl-3 transition-all ease-in-out duration-300 block border-b;
+    @apply font-semibold p-2 text-sm text-gray-800 hover:text-blue-600 focus:text-blue-700 hover:pl-3 transition-all ease-in-out duration-300 block border-b border-gray-200;
 }
 
 .sidenav-last{
@@ -134,5 +134,5 @@ body{
 }
 
 .footer{
-    @apply border-t p-6;
+    @apply border-t border-gray-200 p-6;
 }
