--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -34,10 +34,10 @@ body{
     @apply block pt-6 text-gray-700;
 
     a{
-        @apply text-blue-500 font-medium p-4;
+        @apply text-red-500 font-medium p-4;
 
         &:hover{
-            @apply text-blue-700;
+            @apply text-red-700;
         }
     }
 }
@@ -54,11 +54,11 @@ body{
 
 
 .checkBox{
-    @apply text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded;
+    @apply text-red-600 focus:ring-red-500 border-gray-300 rounded;
 }
 
 .link {
-    @apply text-blue-600 hover:text-blue-500 transition-all ease-in-out duration-300;
+    @apply text-red-600 hover:text-red-500 transition-all ease-in-out duration-300;
 }
 
 .icon-link {
@@ -66,7 +66,7 @@ body{
 }
 
 .btn-primary{
-    @apply border border-transparent font-medium text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-all ease-in-out duration-300;
+    @apply border border-transparent font-medium text-white bg-red-600 hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 transition-all ease-in-out duration-300;
 }
 
 .btn-danger{
@@ -74,11 +74,11 @@ body{
 }
 
 .btn-basic{
-    @apply border border-gray-300 font-medium text-gray-500 bg-gray-50 hover:bg-white hover:text-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-all ease-in-out duration-300;
+    @apply border border-gray-300 font-medium text-gray-500 bg-gray-50 hover:bg-white hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 transition-all ease-in-out duration-300;
 }
 
 .tooltip {
-    @apply invisible absolute text-sm rounded-md shadow-md bg-blue-900 bg-opacity-70 text-blue-100 -mt-9;
+    @apply invisible absolute text-sm rounded-md shadow-md bg-red-900 bg-opacity-70 text-blue-100 -mt-9;
 }
 
 .has-tooltip:hover{
@@ -103,16 +103,16 @@ body{
 .navbar{
     @apply flex-row justify-end md:flex-col md:flex-grow;
     .navlink{
-        @apply font-semibold px-4 py-2 text-gray-800 hover:text-blue-600 focus:text-blue-700 transition-all ease-in-out duration-300;
+        @apply font-semibold px-4 py-2 text-gray-800 hover:text-red-600 focus:text-blue-700 transition-all ease-in-out duration-300;
     }
 }
 
 .sidenav{
-    @apply font-semibold p-2 text-sm text-gray-800 hover:text-blue-600 focus:text-blue-700 hover:pl-3 transition-all ease-in-out duration-300 block border-b border-gray-200;
+    @apply font-semibold p-2 text-sm text-gray-800 hover:text-red-600 focus:text-red-700 hover:pl-3 transition-all ease-in-out duration-300 block border-b border-gray-200;
 }
 
 .sidenav-last{
-    @apply font-semibold p-2 text-sm text-gray-800 hover:text-blue-600 focus:text-blue-700 hover:pl-3 transition-all ease-in-out duration-300 block;
+    @apply font-semibold p-2 text-sm text-gray-800 hover:text-red-600 focus:text-red-700 hover:pl-3 transition-all ease-in-out duration-300 block;
 }
 
 .loginbg{
@@ -127,7 +127,7 @@ body{
 }
 
 .title{
-    @apply w-full bg-gradient-to-r from-blue-800 via-indigo-800 to-blue-700;
+    @apply w-full bg-gradient-to-r from-red-800 via-indigo-800 to-red-700;
 }
 .page-title{
     @apply text-4xl font-medium;
