add kontak page

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -94,6 +94,20 @@ body{
     @apply p-4 border border-blue-300 bg-blue-100 rounded;
 }
 
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:80.25%;
+    position:relative;
+    height:0;
+}
+  .map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
 
 .max-h-0 {
     max-height: 0;
