--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -69,6 +69,7 @@ body{
     @apply border border-transparent font-medium text-white bg-red-600 hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 transition-all ease-in-out duration-300;
 }
 
+
 .btn-danger{
     @apply text-center bg-red-200 text-red-500 rounded transition-all ease-in-out duration-300 hover:bg-red-100 focus:bg-red-100 ;
 }
@@ -166,6 +167,14 @@ body{
 
 .mainpage{
     min-height: calc(100vh - 185px);
+}
+
+.syaratWrap{
+    height: calc(100vh - 350px);
+}
+
+.notifWrap{
+    height: calc(100vh - 350px);
 }
 
 .title{
